Add draft damage taken plugin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(ToolboxPlugins)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/")
 
 add_subdirectory(DailyCapPlugin)
+add_subdirectory(DamageTakenPlugin)
